# cli-cheat-sheets

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/cli_cheat_sheets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/git/: git.py
src/network/: magic_number_subnetting.py
