[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-cheat-sheets"
version = "0.1.0"
description = "CLI cheat sheets and utilities"
authors = [{ name = "Alex" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]





